tweak travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ before_script:
 - cd Build
 - cmake .. -DCMAKE_INSTALL_PREFIX=$PWD/install
 script:
-- cmake --build . --target install && ctest -V -R ssl_tests
+- make -j3 && make install && ctest -V -R ssl_tests
 
