--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
     - libboost-test-dev
     - uuid-dev
     - libnss3-dev
+    - libnss3-tools
     - libsasl2-dev
     - sasl2-bin
     - swig
